--- a/TIA 4/proyectos-papia/.env.example
+++ b/TIA 4/proyectos-papia/.env.example
@@ -20,7 +20,8 @@ LOG_CHANNEL=stack
 LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
-
+#CAMBIAR LA PARTE DE LA CONTRASEÑA POR LA PROPIA, PARA NO CAMBIAR MUCHAS COSAS DE NOSOTROS CREAR UNA BASE DE DATOS EN PGADMIN CON EL NOMBRE Proyectos_papia
+#CAMBIAR EL NOMBRE DE .env.example a solo .env para que pueda funcionar
 DB_CONNECTION=postgresql
 DB_HOST=127.0.0.1
 DB_PORT=5432
